--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link href="/css/black.css" rel="stylesheet" id="stylesheet" />
     <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
 
-    <meta property="og:url" content="https://forkdelta.github.io" />
-    <meta property="og:title" content="ForkDelta | Decentralized Ethereum Token Exchange" />
-    <meta property="og:description" content="ForkDelta is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
-    <meta property="og:image" content="https://forkdelta.github.io/images/logo.png" />
+    <meta property="og:url" content="https://rektex.github.io" />
+    <meta property="og:title" content="RektEx | Decentralized Ethereum Token Exchange" />
+    <meta property="og:description" content="RektEx is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <meta property="og:image" content="https://rektex.github.io/images/logo.png" />
     
-    <title>ForkDelta | Decentralized Ethereum Token Exchange</title>
-    <meta name="description" content="ForkDelta is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <title>RektEx | Decentralized Ethereum Token Exchange</title>
+    <meta name="description" content="RektEx is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
   </head>
 
   <body>
@@ -117,14 +117,14 @@
                     <div style="margin: 12px;">
                       <p style="color: #f00; font-weight: bold;">URL & Status</p>
                       <p style="font-size: 12px;">
-                        The URL of this project is <a href="https://forkdelta.github.io">forkdelta.github.io</a>. Bookmark it once and use the bookmark.
+                        The URL of this project is <a href="https://rektex.github.io">rektex.github.io</a>. Bookmark it once and use the bookmark.
                       </p>
                       <p style="font-size: 12px;">
                         This interface is a fork of <a href="https://etherdelta.com">EtherDelta</a>. It interacts with the original API and contract.
                       </p>
                       <p style="color: #f00; font-weight: bold;">How to Start Trading</p>
                       <p style="font-size: 12px;">
-                        <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. ForkDelta cannot help you with funds incorrectly deposited to EtherDelta contract.
+                        <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. RektEx cannot help you with funds incorrectly deposited to EtherDelta contract.
                       </p>
                       <p style="color: #f00; font-weight: bold;">EtherDelta Disclaimer</p>
                       <p style="font-size: 12px;">
