--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <li><a href="javascript:;" onclick="document.getElementById('stylesheet').setAttribute('href', '/css/white.css')"><i class="fa fa-square-o" aria-hidden="true"></i></a></li>
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
+          <ul>
+            <li><a href=http://rektex.com>Forum</a></li>
+          </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown" id="helpDropdown"></li>
             <li class="dropdown" id="tokenGuidesDropdown"></li>
