--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
                       <p style="font-size: 12px;">
                         <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. RektEx cannot help you with funds incorrectly deposited to EtherDelta contract.
                       </p>
-                      <p style="color: #f00; font-weight: bold;">EtherDelta Disclaimer</p>
+                      <p style="color: #f00; font-weight: bold;">RektEx Disclaimer</p>
                       <p style="font-size: 12px;">
-                        EtherDelta is a decentralized trading platform that lets
+                        RektEx is a decentralized trading platform that lets
                         you trade Ether and Ethereum-based tokens directly with other users.
                         You are responsible for your own account, funds, and private keys.
                         You are responsible for your own trading decisions, and the details
                         and mechanics of the tokens you trade.
-                        EtherDelta is not responsible for your decisions, actions, or losses that result from
-                        using EtherDelta. EtherDelta makes no guarantee about the tokens that you trade using
-                        EtherDelta. EtherDelta does not hold your funds and does not offer refunds.
-                        While the information contained on EtherDelta is periodically updated, no guarantee is given
-                        that the information provided on EtherDelta is correct, complete, or up-to-date.
-                        By using EtherDelta, you acknowledge this and agree to these terms.
+                        RektEx is not responsible for your decisions, actions, or losses that result from
+                        using RektEx. RektEx makes no guarantee about the tokens that you trade using
+                        RektEx. RektEx does not hold your funds and does not offer refunds.
+                        While the information contained on RektEx is periodically updated, no guarantee is given
+                        that the information provided on RektEx is correct, complete, or up-to-date.
+                        By using RektEx, you acknowledge this and agree to these terms.
                       </p>
                     </div>
                   </div>
