--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
+            <li><a href=http://listing.rektex.com>Listing</a></li>
             <li><a href=http://rektex.com>Forum</a></li>
             <li class="dropdown" id="helpDropdown"></li>
             <li class="dropdown" id="tokenGuidesDropdown"></li>
