--- a/index.html
+++ b/index.html
@@ -60,19 +60,24 @@
     </nav>
 
     <div class="container">
+      <div id="volume" style="display: none;"></div>
       <div class="row">
         <div class="col-md-3 no-float">
           <div class="row-container">
-            <div class="row-header trn">balance</div>
-            <div id="balance"></div>
-            <div class="row-header trn">volume</div>
-            <div id="volume"></div>
-          </div>
-        </div>
-        <div class="col-md-2 no-float">
-          <div class="row-container">
             <div class="row-header trn">order_book</div>
             <div id="orders"></div>
+            
+          </div>
+        </div>
+        <div class="col-md-3 no-float">
+          <div class="row-container">
+            <div class="row-header trn">depth chart</div>
+            <div class="row-box height2">
+              <div class="tab-content" style="height: 100%;">
+                <div role="tabpanel" class="tab-pane active" id="chartDepth" style="height: 100%; width: 100%; background: #000;"></div>
+              </div>
+            </div>
+
             <div class="row-header trn">new_order</div>
             <div class="row-box nav-header">
               <ul class="nav nav-tabs two columns" role="tablist">
@@ -81,32 +86,25 @@
               </ul>
             </div>
             <div class="row-box height3 padding">
-              <div class="tab-content">
+              <div class="tab-content buysellwidget">
                 <div role="tabpanel" class="tab-pane active" id="buy"></div>
                 <div role="tabpanel" class="tab-pane" id="sell"></div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4 no-float">
+        <div class="col-md-3 no-float">
           <div class="row-container">
             <div class="row-header trn">price_chart</div>
-            <div class="row-box nav-header">
-              <ul class="nav nav-tabs two columns" role="tablist">
-                <li role="presentation" class="active"><a href="#chartPrice" aria-controls="chartPrice" role="tab" data-toggle="tab" class="trn">price</a></li>
-                <li role="presentation"><a href="#chartDepth" aria-controls="chartDepth" role="tab" data-toggle="tab" class="trn">depth</a></li>
-              </ul>
-            </div>
             <div class="row-box height2">
               <div class="tab-content" style="height: 100%;">
                 <div role="tabpanel" class="tab-pane active" id="chartPrice" style="height: 100%; width: 100%; background: #000;"></div>
-                <div role="tabpanel" class="tab-pane" id="chartDepth" style="height: 100%; width: 100%; background: #000;"></div>
               </div>
             </div>
             <div class="row-header trn">my_transactions</div>
             <div class="row-box nav-header">
               <ul class="nav nav-tabs four columns" role="tablist">
-                <li role="presentation" class="active"><a href="#important" aria-controls="info" role="tab" data-toggle="tab" class="trn">important</a></li>
+                <li role="presentation" class="active"><a href="#important" aria-controls="info" role="tab" data-toggle="tab" class="trn">balance</a></li>
                 <li role="presentation"><a href="#myTrades" aria-controls="myTrades" role="tab" data-toggle="tab" class="trn">trades</a></li>
                 <li role="presentation"><a href="#myOrders" aria-controls="myOrders" role="tab" data-toggle="tab" class="trn">orders</a></li>
                 <li role="presentation"><a href="#myFunds" aria-controls="myFunds" role="tab" data-toggle="tab" class="trn">funds</a></li>
@@ -116,33 +114,7 @@
                 <div class="row-box height2 scroll">
                   <div class="tab-content">
                   <div role="tabpanel" class="tab-pane active" id="important">
-                    <div style="margin: 12px;">
-                      <p style="color: #f00; font-weight: bold;">URL & Status</p>
-                      <p style="font-size: 12px;">
-                        The URL of this project is <a href="https://rektex.github.io">rektex.github.io</a>. Bookmark it once and use the bookmark.
-                      </p>
-                      <p style="font-size: 12px;">
-                        This interface is a fork of <a href="https://etherdelta.com">EtherDelta</a>. It interacts with the original API and contract.
-                      </p>
-                      <p style="color: #f00; font-weight: bold;">How to Start Trading</p>
-                      <p style="font-size: 12px;">
-                        <strong>Use the Deposit form (upper left) to put your funds (ETH and tokens) on the exchange.</strong> Do not send your tokens directly to the smart contract, or they will be lost and unrecoverable. RektEx cannot help you with funds incorrectly deposited to EtherDelta contract.
-                      </p>
-                      <p style="color: #f00; font-weight: bold;">RektEx Disclaimer</p>
-                      <p style="font-size: 12px;">
-                        RektEx is a decentralized trading platform that lets
-                        you trade Ether and Ethereum-based tokens directly with other users.
-                        You are responsible for your own account, funds, and private keys.
-                        You are responsible for your own trading decisions, and the details
-                        and mechanics of the tokens you trade.
-                        RektEx is not responsible for your decisions, actions, or losses that result from
-                        using RektEx. RektEx makes no guarantee about the tokens that you trade using
-                        RektEx. RektEx does not hold your funds and does not offer refunds.
-                        While the information contained on RektEx is periodically updated, no guarantee is given
-                        that the information provided on RektEx is correct, complete, or up-to-date.
-                        By using RektEx, you acknowledge this and agree to these terms.
-                      </p>
-                    </div>
+                    <div id="balance"></div>
                   </div>
                   <div role="tabpanel" class="tab-pane" id="myTrades"></div>
                   <div role="tabpanel" class="tab-pane" id="myOrders"></div>
