remove blance tab

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             <div class="row-header trn">my_transactions</div>
             <div class="row-box nav-header">
               <ul class="nav nav-tabs four columns" role="tablist">
-                <li role="presentation" class="active"><a href="#important" aria-controls="info" role="tab" data-toggle="tab" class="trn">balance</a></li>
-                <li role="presentation"><a href="#myTrades" aria-controls="myTrades" role="tab" data-toggle="tab" class="trn">trades</a></li>
+                <!--<li role="presentation"><a href="#important" aria-controls="info" role="tab" data-toggle="tab" class="trn">balance</a></li>-->
+                <li role="presentation" class="active"><a href="#myTrades" aria-controls="myTrades" role="tab" data-toggle="tab" class="trn">trades</a></li>
                 <li role="presentation"><a href="#myOrders" aria-controls="myOrders" role="tab" data-toggle="tab" class="trn">orders</a></li>
                 <li role="presentation"><a href="#myFunds" aria-controls="myFunds" role="tab" data-toggle="tab" class="trn">funds</a></li>
               </ul>
@@ -136,9 +136,9 @@
                 <div class="row-box height2 scroll">
                   <div class="tab-content">
                   <div role="tabpanel" class="tab-pane active" id="important">
-                   
+                    <div role="tabpanel" class="tab-pane" id="myTrades"></div>
                   </div>
-                  <div role="tabpanel" class="tab-pane" id="myTrades"></div>
+                 
                   <div role="tabpanel" class="tab-pane" id="myOrders"></div>
                   <div role="tabpanel" class="tab-pane" id="myFunds"></div>
                 </div>
