--- a/testing.html
+++ b/testing.html
@@ -12,6 +12,7 @@
     <link href="/css/alertify-bootstrap.min.css" rel="stylesheet" />
     <link href="/css/black.css" rel="stylesheet" id="stylesheet" />
     <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
+    <link href="/css/new-stylesheet.css" rel="stylesheet" type="text/css"/>
 
     <meta property="og:url" content="https://rektex.github.io" />
     <meta property="og:title" content="RektEx | Decentralized Ethereum Token Exchange" />
