--- a/testing.html
+++ b/testing.html
@@ -10,7 +10,6 @@
     <link href="/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
     <link href="/css/alertify.min.css" rel="stylesheet" />
     <link href="/css/alertify-bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/black.css" rel="stylesheet" id="stylesheet" />
     <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
     <link href="/css/new-stylesheet.css" rel="stylesheet" type="text/css"/>
 
@@ -43,8 +42,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="javascript:;" onclick="document.getElementById('stylesheet').setAttribute('href', '/css/black.css')"><i class="fa fa-square" aria-hidden="true"></i></a></li>
-            <li><a href="javascript:;" onclick="document.getElementById('stylesheet').setAttribute('href', '/css/white.css')"><i class="fa fa-square-o" aria-hidden="true"></i></a></li>
+            <li><a href="javascript:;" onclick="document.getElementById('stylesheet').setAttribute('href', '/css/new-stylesheet.css')"><i class="fa fa-square" aria-hidden="true"></i></a></li>
+            <li><a href="javascript:;" onclick="document.getElementById('stylesheet').setAttribute('href', '/css/white-stylesheet.css')"><i class="fa fa-square-o" aria-hidden="true"></i></a></li>
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
