--- a/testing.html
+++ b/testing.html
@@ -167,6 +167,7 @@
     <script src="/js/ejs_production.js" type="text/javascript"></script>
     <script src="/js/chrome-u2f-api.js" type="text/javascript"></script>
     <script src="/js/ledger.min.js" type="text/javascript"></script>
+    <script src="/js/jquery.slimscroll.min.js" type="text/javascript"></script>
     <script src="/js/main.js" type="text/javascript"></script>
 
     <script>
@@ -176,6 +177,8 @@
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-112001937-1', 'auto');
       ga('send', 'pageview');
+	  
+	  $('.scroll').slimscroll();
     </script>
   </body>
 </html>
