add scroll on order book table

--- a/testing.html
+++ b/testing.html
@@ -178,7 +178,7 @@
       ga('create', 'UA-112001937-1', 'auto');
       ga('send', 'pageview');
 	  
-	  $('.scroll').slimscroll();
+	  $('.scroll, #orderBookScroll').slimscroll();
     </script>
   </body>
 </html>
