scroll bar testing

--- a/testing.html
+++ b/testing.html
@@ -178,7 +178,13 @@
       ga('create', 'UA-112001937-1', 'auto');
       ga('send', 'pageview');
 	  
-	  $('.scroll, #orderBookScroll').slimscroll();
+	 
+	  $('.scroll').slimscroll({
+    
+	  }).parent().css({
+		 
+	  });
+  
     </script>
   </body>
 </html>
