checking scroll bar issue

--- a/testing.html
+++ b/testing.html
@@ -179,11 +179,8 @@
       ga('send', 'pageview');
 	  
 	 
-	  $('.scroll').slimscroll({
-    
-	  }).parent().css({
-		 
-	  });
+	  $('.scroll').slimscroll();
+	  $('#orderBookScroll').slimscroll();
   
     </script>
   </body>
