remove black and white option from top bar or testing slim scroll JS

--- a/testing.html
+++ b/testing.html
@@ -42,8 +42,6 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="javascript:;" onclick="document.getElementById('stylesheet').setAttribute('href', '/css/new-stylesheet.css')"><i class="fa fa-square" aria-hidden="true"></i></a></li>
-            <li><a href="javascript:;" onclick="document.getElementById('stylesheet').setAttribute('href', '/css/white-stylesheet.css')"><i class="fa fa-square-o" aria-hidden="true"></i></a></li>
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -179,8 +177,8 @@
       ga('send', 'pageview');
 	  
 	 
-	  $('.scroll').slimscroll();
-	  $('#orderBookScroll').slimscroll();
+	  jQuery('.scroll').slimscroll();
+	  jQuery('#orderBookScroll').slimscroll();
   
     </script>
   </body>
