changes in testing.html

--- a/testing.html
+++ b/testing.html
@@ -38,7 +38,7 @@
             <img src="/images/title.png" alt="Rawr!" />
           </a>
         </div>
-
+		
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
@@ -176,10 +176,11 @@
       ga('create', 'UA-112001937-1', 'auto');
       ga('send', 'pageview');
 	  
-	 
-	  jQuery('.scroll').slimscroll();
+    </script>
+    <script>
+   	  jQuery('.scroll').slimscroll();
 	  jQuery('#orderBookScroll').slimscroll();
-  
+
     </script>
   </body>
 </html>
