add slim scroll on orders

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="row-header">
               <span class="trn">order_book</span>
             </div>
-            <div class="row-box height13">
+            <div class="row-box height13 scroll">
               <div id="orders"></div>
             </div>
 			
@@ -179,7 +179,6 @@
     </script>
     <script>
    	  jQuery('.scroll').slimscroll();
-	  jQuery('#orderBookScroll').slimscroll();
 
     </script>
   </body>
