--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link href="/css/small.css" rel="stylesheet" media="only screen and (max-device-width: 480px)" />
     <link href="/css/new-stylesheet.css" rel="stylesheet" type="text/css"/>
 
-    <meta property="og:url" content="https://rektex.github.io" />
-    <meta property="og:title" content="RektEx | Decentralized Ethereum Token Exchange" />
-    <meta property="og:description" content="RektEx is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
-    <meta property="og:image" content="https://rektex.github.io/images/logo.png" />
+    <meta property="og:url" content="https://exknox.github.io" />
+    <meta property="og:title" content="Exknox | Decentralized Ethereum Token Exchange" />
+    <meta property="og:description" content="Exknox is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <meta property="og:image" content="https://exknox.github.io/images/logo.png" />
     
-    <title>RektEx | Decentralized Ethereum Token Exchange</title>
-    <meta name="description" content="RektEx is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
+    <title>Exknox | Decentralized Ethereum Token Exchange</title>
+    <meta name="description" content="Exknox is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
   </head>
 
   <body>
@@ -45,7 +45,7 @@
             <li class="dropdown" id="tokensDropdown"></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href=http://listing.rektex.com>Listing</a></li>
+            <li><a href=http://listing.exknox.com>Listing</a></li>
             <li><a href=http://rektex.com>Forum</a></li>
             <li class="dropdown" id="helpDropdown"></li>
             <li class="dropdown" id="tokenGuidesDropdown"></li>
