--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://exknox.github.io" />
     <meta property="og:title" content="Exknox | Decentralized Ethereum Token Exchange" />
     <meta property="og:description" content="Exknox is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
-    <meta property="og:image" content="https://exknox.github.io/images/logo.png" />
+    <meta property="og:image" content="https://exknox.github.io/images/logo1.png" />
     
     <title>Exknox | Decentralized Ethereum Token Exchange</title>
     <meta name="description" content="Exknox is a fully decentralized Ethereum Token Exchange with the most ERC20 listings of any exchange. Start trading cryptocurrency today." />
